--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Artillery OS</title>
 	<link rel="stylesheet" href="/css/style.css">
-	<link rel="icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
     </head>
     <body>
+	<main>
+	    <header></header>
+	    <div class="flex-container">
+		<div class="col-1">
+		    <ul>
+			<li><a href="/"></a></li>
+			Home
+			<li><a href="/"></a></li>
+			<li><a href="/"></a></li>
+		    </ul>
+		</div>
+		<div class="col-2">
+		    Main	
+		</div>
+		<div class="col-3">
+		    Nav2
+		</div>
+	    </div>
+	    </main>
     </body>
 </html>
 
