--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </head>
     <body>
 	<main>
-	    <header></header>
+	    <header>
+		<h1 class="header_title">ArtilleryOS</h1>
+	    </header>
 	    <div class="flex-container">
 		<div class="col-1">
 		    <ul>
@@ -21,7 +23,14 @@
 		    </ul>
 		</div>
 		<div class="col-2">
-		    Main	
+		    <h2>About:</h2>
+		    <img src="./assets/images/logo.png" alt="artillerOs logo"/>
+		    <div class="description">
+			
+		    </div>
+		    <h1>Warning, the website is about to be lit</h1>
+		    <img width="100px" id="simple_gif" src="./assets/images/fire.gif" alt="simple gif"/>
+
 		</div>
 		<div class="col-3">
 		    Nav2
