<a> buttons added and a bit of styling too

--- a/index.html
+++ b/index.html
@@ -16,24 +16,41 @@
 	    <div class="flex-container">
 		<div class="col-1">
 		    <ul>
-			<li><a href="/"></a></li>
+			<li><a href="/" id="a-home"></a></li>
 			Home
-			<li><a href="/"></a></li>
-			<li><a href="/"></a></li>
+			<li><a href="/" id="a-docs"></a></li>
+			Docs
+			<a href="/" id="a-contributors"></a>
+			Contributors
+			<a href="/" id="a-contributors"></a>
+			FAQ
+			<a href="/" id="a-contributors"></a>
+			Gallery
 		    </ul>
 		</div>
 		<div class="col-2">
-		    <h2>About:</h2>
-		    <img src="./assets/images/logo.png" alt="artillerOs logo"/>
+		    <h2>About Artillery</h2>
+		    <img src="./assets/images/logo.png" alt="Artillery OS Logo">
 		    <div class="description">
-			
+			<p>ArtilleryOS is a unique graphical operating system that combines the simplicity and power of Unix-like systems with a tiling window management environment. Featuring a custom-designed kernel, ArtilleryOS offers an efficient and user-friendly computing experience.</p>
 		    </div>
 		    <h1>Warning, the website is about to be lit</h1>
 		    <img width="100px" id="simple_gif" src="./assets/images/fire.gif" alt="simple gif"/>
 
 		</div>
 		<div class="col-3">
-		    Nav2
+		    <ul>
+			<li><a href="/" id="a-home"></a></li>
+			Download
+			<li><a href="/" id="a-docs"></a></li>
+			Community
+			<a href="/" id="a-contributors"></a>
+			Devlog
+			<a href="/" id="a-contributors"></a>
+			Roadmap
+			<a href="/" id="a-contributors"></a>
+			About
+		    </ul>
 		</div>
 	    </div>
 	    </main>
